fixed z-index

--- a/src/components/AppHeader/styles.scss
+++ b/src/components/AppHeader/styles.scss
@@ -2,6 +2,7 @@
 
 .app-header {
   position: fixed;
+  z-index: $zindex-fixed;
   top: 0;
   left: 0;
   background-color: $primary;
