--- a/src/components/AppNav/styles.scss
+++ b/src/components/AppNav/styles.scss
@@ -2,6 +2,7 @@
 
 .app-nav {
   position: fixed;
+  z-index: $zindex-fixed;
   bottom: 0;
   left: 0;
   background-color: $body-bg;
